--- a/layouts/global.css
+++ b/layouts/global.css
@@ -2,6 +2,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-Thin.ttf) format('trueType');
 }
@@ -10,6 +11,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 200;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-ExtraLight.ttf) format('trueType');
 }
@@ -18,6 +20,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-Light.ttf) format('trueType');
 }
@@ -26,6 +29,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-Regular.ttf) format('trueType');
 }
@@ -34,6 +38,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-Medium.ttf) format('trueType');
 }
@@ -42,6 +47,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-SemiBold.ttf) format('trueType');
 }
@@ -50,6 +56,7 @@
   font-family: 'IBM Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local('IBM Sans'),
     url(~assets/fonts/IBMPlexSansArabic-Bold.ttf) format('trueType');
 }
@@ -58,6 +65,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-Thin.ttf) format('trueType');
 }
@@ -66,6 +74,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 200;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-ExtraLight.ttf) format('trueType');
 }
@@ -74,6 +83,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-Light.ttf) format('trueType');
 }
@@ -82,6 +92,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-Regular.ttf) format('trueType');
 }
@@ -90,6 +101,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-Medium.ttf) format('trueType');
 }
@@ -98,6 +110,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-SemiBold.ttf) format('trueType');
 }
@@ -106,6 +119,7 @@
   font-family: 'IBM Mono';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local('IBM Mono'),
     url(~assets/fonts/IBMPlexMono-Bold.ttf) format('trueType');
 }
